modif police messes

--- a/style.css
+++ b/style.css
@@ -127,3 +127,9 @@ img.fade-in {
 .searchCelebrationTimeAddTo .loadMore {
     display: none !important;
 }
+
+.searchCelebrationTimeDisplayPanel {
+    font-family: "Muli";
+    font-size: 14px;
+    color: #1A1918;
+}
